[tool.poetry]
name = "which_ap_ewc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ncclient = "^0.6.12"
xmltodict = "^0.12.0"
Flask = "^2.0.2"
humanfriendly = "^10.0"

[tool.poetry.dev-dependencies]
lavender = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
